fix Chrome : z-index popin page content

--- a/wp-content/themes/dubeaujeu/assets/css/h-main.css
+++ b/wp-content/themes/dubeaujeu/assets/css/h-main.css
@@ -241,6 +241,10 @@
     box-shadow: 1px 1px 1px rgba(0,0,0,.2);
 }
 
+#popin .page-wrap {
+    position: relative;
+    z-index: 3;
+}
 
 /* ----------------------------------------------------------
    Objects
